RESOLVED FIXED269253
Regression: Flaky crash under HTMLMediaElement::speakCueText() on the bots
https://bugs.webkit.org/show_bug.cgi?id=269253
Summary Regression: Flaky crash under HTMLMediaElement::speakCueText() on the bots
Chris Dumez
Reported 2024-02-12 16:56:16 PST
Flaky crash under HTMLMediaElement::speakCueText() on the bots: ``` ASSERTION FAILED: !deletionHasBegun() /Volumes/Data/worker/macOS-AppleSilicon-Sonoma-Debug-Build-EWS/build/Source/WebCore/dom/Node.h(817) : void WebCore::Node::ref() const 1 0x13c5ae3f8 WTFCrash 2 0x2a8150340 WebCore::AudioWorkletProcessor::buildJSArguments(JSC::VM&, JSC::JSGlobalObject&, JSC::MarkedVector<JSC::JSValue, 8ul, WTF::RecordOverflow>&, WTF::Vector<WTF::RefPtr<WebCore::AudioBus, WTF::RawPtrTraits<WebCore::AudioBus>, WTF::DefaultRefDerefTraits<WebCore::AudioBus>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, WTF::Vector<WTF::Ref<WebCore::AudioBus, WTF::RawPtrTraits<WebCore::AudioBus>, WTF::DefaultRefDerefTraits<WebCore::AudioBus>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&, WTF::HashMap<WTF::String, std::__1::unique_ptr<WebCore::AudioArray<float>, std::__1::default_delete<WebCore::AudioArray<float>>>, WTF::DefaultHash<WTF::String>, WTF::HashTraits<WTF::String>, WTF::HashTraits<std::__1::unique_ptr<WebCore::AudioArray<float>, std::__1::default_delete<WebCore::AudioArray<float>>>>, WTF::MemoryCompactLookupOnlyRobinHoodHashTableTraits> const&) 3 0x2a817cce4 WebCore::Node::ref() const 4 0x2a5ad946c WTF::DefaultRefDerefTraits<WebCore::HTMLMediaElement>::refIfNotNull(WebCore::HTMLMediaElement*) 5 0x2a5ad9428 WTF::RefPtr<WebCore::HTMLMediaElement, WTF::RawPtrTraits<WebCore::HTMLMediaElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLMediaElement>>::RefPtr(WebCore::HTMLMediaElement*) 6 0x2a5ad90f8 WTF::RefPtr<WebCore::HTMLMediaElement, WTF::RawPtrTraits<WebCore::HTMLMediaElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLMediaElement>>::RefPtr(WebCore::HTMLMediaElement*) 7 0x2a959bff8 WebCore::HTMLMediaElement::speakCueText(WebCore::TextTrackCue&)::$_34::operator()(WebCore::TextTrackCue const&) const 8 0x2a959be88 WTF::Detail::CallableWrapper<WebCore::HTMLMediaElement::speakCueText(WebCore::TextTrackCue&)::$_34, void, WebCore::TextTrackCue const&>::call(WebCore::TextTrackCue const&) 9 0x2a985acc8 WTF::Function<void (WebCore::TextTrackCue const&)>::operator()(WebCore::TextTrackCue const&) const 10 0x2a9865ce0 WebCore::VTTCue::prepareToSpeak(WebCore::SpeechSynthesis&, double, double, WTF::Function<void (WebCore::TextTrackCue const&)>&&)::$_13::operator()(WebCore::SpeechSynthesisUtterance const&) const 11 0x2a9865ab4 WTF::Detail::CallableWrapper<WebCore::VTTCue::prepareToSpeak(WebCore::SpeechSynthesis&, double, double, WTF::Function<void (WebCore::TextTrackCue const&)>&&)::$_13, void, WebCore::SpeechSynthesisUtterance const&>::call(WebCore::SpeechSynthesisUtterance const&) 12 0x2a809293c WTF::Function<void (WebCore::SpeechSynthesisUtterance const&)>::operator()(WebCore::SpeechSynthesisUtterance const&) const 13 0x2a8090d34 WebCore::SpeechSynthesisUtterance::errorEventOccurred(WTF::AtomString const&, WebCore::SpeechSynthesisErrorCode) 14 0x2a8090bb0 WebCore::SpeechSynthesis::handleSpeakingCompleted(WebCore::SpeechSynthesisUtterance&, bool) 15 0x2a8091928 WebCore::SpeechSynthesis::speakingErrorOccurred(WebCore::PlatformSpeechSynthesisUtterance&) 16 0x2aa8c4288 WebCore::PlatformSpeechSynthesizerMock::cancel() 17 0x2a809085c WebCore::SpeechSynthesis::cancel() 18 0x2a954ada4 WebCore::HTMLMediaElement::unregisterWithDocument(WebCore::Document&) 19 0x2a954a530 WebCore::HTMLMediaElement::~HTMLMediaElement() 20 0x2a9622318 WebCore::HTMLVideoElement::~HTMLVideoElement() 21 0x2a961bfc8 WebCore::HTMLVideoElement::~HTMLVideoElement() 22 0x2a961bff4 WebCore::HTMLVideoElement::~HTMLVideoElement() ```
Attachments
Chris Dumez
Comment 1 2024-02-12 16:57:26 PST
EWS
Comment 3 2024-02-12 20:57:24 PST
Committed 274521@main (830c8b888100): <https://commits.webkit.org/274521@main> Reviewed commits have been landed. Closing PR #24300 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2024-02-12 20:58:19 PST
Note You need to log in before you can comment on or make changes to this bug.