Regression: Flaky crash under HTMLMediaElement::speakCueText() on the bots https://bugs.webkit.org/show_bug.cgi?id=269253

Reviewed by Ryosuke Niwa.

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::speakCueText):

Canonical link: https://commits.webkit.org/274521@main